# ai-risk-analyzer

./: .gitignore  README.md  mypy.ini  pyproject.toml
eval/: README.md  questions.jsonl
src/: app.py
src/api/: main.py  models.py  schemas.py
src/api/routers/: search_router.py
src/clients/: base_client.py  fmp_client.py  main.py
src/errors/: errors.py
src/indexing/: README.md  __init__.py  cli.py  embedder.py  evaluator.py  indexer.py  vector_store.py
src/ingestion/: config.py  download_sp500_reports.py  models.py  pipeline.py
src/ingestion/core/: constants.py  downloader.py  ingestor.py  processor.py
src/models/: api_models.py  fmp_models.py  ingestion_models.py  riskbot_models.py
src/models/rag/: rag_pipeline.py
src/riskbot/: agent.py
src/riskbot/utils/: chains.py  document_retriever.py  nodes.py  states.py  tools.py
src/riskbot/utils/prompts/: intent_router_prompt.j2  planner_prompt.j2  reasoner_prompt.j2
src/services/neo4j/: queries.py
src/utils/: __init__.py  config.py  llm.py  logging_utils.py
tests/: test_intent_router.py
tests/unit/ingestion/: test_download_sp500_reports.py
