[tool.poetry]
name = "ai-risk-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" },
            { include = "ingestion", from = "src" },
            { include = "models", from = "src" },
            { include = "preprocessing", from = "src" },
            { include = "utils", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.6"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
requests = "^2.32.3"
bs4 = "^0.0.2"
msgspec = "^0.19.0"
ruff = "^0.11.2"
mypy = "^1.15.0"
httpx = "^0.28.1"
pandas = "^2.2.3"
lxml = "^5.3.1"
tenacity = "^9.1.2"
pytest = "^8.3.5"


[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
