[tool.poetry]
name = "ai-risk-analyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
  { include = "api", from = "src" },
  { include = "ingestion", from = "src" },
  { include = "models", from = "src" },
  { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "==3.12.8"
pydantic = "==2.10.6"
pydantic-settings = "==2.8.1"
fastapi = "==0.115.9"
uvicorn = "==0.34.0"
requests = "==2.32.3"
httpx = "==0.28.1"
bs4 = "==0.0.2"
beautifulsoup4 = "==4.13.3"
lxml = "==5.3.1"
msgspec = "==0.19.0"
tenacity = "==9.1.2"
pandas = "==2.2.3"
langchain = "==0.3.27"
langgraph = "==0.3.25"
neo4j = "==5.28.1"
ruff = "==0.11.2"
mypy = "==1.15.0"
pytest = "==8.3.5"
langchain-openai = "^0.3.28"
jinja2 = "^3.1.6"
gradio = "^5.37.0"
chainlit = "^2.6.3"
langchain-neo4j = "^0.5.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
